Fixed: Photos from camera are resizable and visible after cropping

--- a/css/style.css
+++ b/css/style.css
@@ -380,9 +380,12 @@ input {
 
 video {
     width: 307px;
-    height: 250px;
+    height: 300px;
     background: rgba(255, 255, 255, 0.5);
     border: 1px solid #ccc;
+    top: 65px;
+    left: 600px;
+    position: absolute;
 }
 
 #shot {
@@ -397,5 +400,7 @@ video {
 
 #shotButtonWrapper {
     display: none;
+    top: 385px;
+    left: 700px;
+    position: absolute;
 }
-
